--- a/src/components/topbar/Topbar.scss
+++ b/src/components/topbar/Topbar.scss
@@ -1,3 +1,9 @@
 .topbar {
     background-color: lightgoldenrodyellow;
+    width: 100%;
+    height:70px;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+
 }
