--- a/src/components/topbar/Topbar.scss
+++ b/src/components/topbar/Topbar.scss
@@ -1,5 +1,7 @@
+@import '../Global.scss';
+
 .topbar {
-    background-color: lightgoldenrodyellow;
+    background-color: $mainColor;
     width: 100%;
     height:70px;
     position: fixed;
