created header & header components

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+*, html {
+    scroll-behavior: smooth !important;
+}  
+
 .app {
     height: 100vh;
 }
@@ -8,6 +12,7 @@
     background-color: lightsalmon;
     position: relative;
     top: 70px;
+    scroll-behavior: smooth !important;
     scroll-snap-type: y mandatory;
     scrollbar-width: none; // for firefox
     &::-webkit-scrollbar{ // for other browsers
