updated header and navigation menu. Added clickable material-ui/icons leading to respective social links (github, linkedin, email)

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,15 +2,14 @@
     scroll-behavior: smooth !important;
 }  
 
-.app {
+.menu {
     height: 100vh;
 }
 
 .sections {
     width: 100%;
-    height: calc(100vh - 70px);
+    // height: calc(100vh - 70px);
     background-color: lightsalmon;
-    position: relative;
     top: 70px;
     scroll-behavior: smooth !important;
     scroll-snap-type: y mandatory;
