--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,15 +4,10 @@
     background-color: $mainColor;
     color: black;
     width: 100%;
-    height:70px;
-    position: fixed;
-    top: 0;
-    z-index: 2;
-
 }
 
 .header-content {
-    padding: 10px 30px;
+    padding: 15px 30px 0px;
     display: flex;
     justify-content: space-between;
     line-height: 1.5;
@@ -24,17 +19,6 @@
     display: flex; 
 }
 
-.logo {
-    font-size: 40px;
-    font-weight: 700;
-    text-decoration: none;
-}
-
-.left {
-    display: flex;
-    align-items: center;
-}
-
 .contact {
     display: flex;
     align-items: center;
@@ -42,4 +26,9 @@
 
 .contact-items {
     padding: 5px;
+}
+
+.contact-items a {
+    text-decoration: none;
+    color: black;
 }
