--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-between;
     line-height: 1.5;
+    border-bottom: 1px solid #e0e0e0;
 }
 
 .header-content h1 {
