--- a/src/components/navigation/Navigation.scss
+++ b/src/components/navigation/Navigation.scss
@@ -3,7 +3,7 @@
     align-items: center;
     position: right;
     justify-content: flex-end;
-    padding: 0px 30px;
+    padding: 10px 30px 0px;
 }
 
 .nav a {
