added new font(Roberto Mono) to match css effect for the about section. Added font % in the navigation section for mobile ease of use.

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -18,6 +18,8 @@
     font-weight: 200;
     align-items:center;
     display: flex; 
+    font-family: Roboto Mono;
+    font-weight:100;
 }
 
 .contact {
