--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -29,13 +29,14 @@
 
 .title {
     display:flex;
+    
 }
+
 
 .about h1 {
     font-weight: 100;
     position: relative;
-    font-family: monospace;
-    // width: max-content;
+    font-family: Roboto Mono;
 }
 
 .about h1::before,
@@ -65,7 +66,7 @@
 .about p {
     margin: 10px 0px;
     font-weight: 400;
-    font-family: monospace;
+    font-family: Roboto Mono;
     opacity: 0;
     transform: translateY(3rem);
     animation: fadeInUp 2s ease calc(4s + .5s) forwards;
@@ -73,7 +74,7 @@
 
 .about a {
     color: lightgreen;
-    font-family: monospace;
+    font-family: Roboto Mono;
 }
 
 
