added minor changes to div layout

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -22,16 +22,16 @@
     font-weight:100;
 }
 
-.contact {
+.media {
     display: flex;
     align-items: center;
 }
 
-.contact-items {
+.media-items {
     padding: 5px;
 }
 
-.contact-items a {
+.media-items a {
     text-decoration: none;
     color: black;
 }
