--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -1,3 +1,5 @@
-// .contact {
-//     background-color: lightblue;
-// }
+.contact {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
