--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -34,4 +34,11 @@
 .media-items a {
     text-decoration: none;
     color: black;
+    
+}
+
+.icon:hover {
+    transform: scale(1.2);
+    padding: 5%;
+    color: lightgreen;
 }
