--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -14,7 +14,7 @@
     border-bottom: 1px solid #e0e0e0;
 }
 
-.header-content h1 {
+.header-name {
     font-weight: 200;
     align-items:center;
     display: flex; 
@@ -22,14 +22,32 @@
     font-weight:100;
 }
 
+.header-name a{
+    -webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    cursor:default;
+}
+
+.header-name p {
+    cursor:default;
+}
+
+.header-name a:hover {
+    color: lightgreen;
+    transition: all .1s ease-in-out;
+    -webkit-transition: all .1s ease-in-out;
+    -moz-transition: all .1s ease-in-out;
+    -o-transition: all .1s ease-in-out;
+    cursor:default;
+}
+
 .media {
     display: flex;
     align-items: center;
 }
 
-// .media-items {
-//     padding: 5px;
-// }
 
 
 .media-items a {
