added portfolio section with dynamic active classes and currently adding dynamic data with useEffect hooks

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,9 @@
     &::-webkit-scrollbar{ // for other browsers
         display:none;
     }
+
+    height: calc(100vh);
+    scroll-snap-align: start;
     
     * {
         
