--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -2,4 +2,69 @@
     display:flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+
+.title-page {
+    font-size: 50px;
+}
+
+ul {
+    margin: 10px;
+    padding: 0;
+    list-style: none;
+    display: flex;
+} 
+
+li {
+    font-size:12px;
+    margin-right: 5px;
+    padding: 7px;
+}
+
+.active {
+    background-color: lightgreen;
+    color:white;
+    border-radius: 10px;
+    cursor:pointer;
+}
+
+.container {
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    flex-wrap:wrap;
+}
+
+.item {
+    width: 220px;
+    height: 150px;
+    border-radius: 20px;
+    border: 1px solid lightgrey;
+    margin: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    color: white;
+    position: relative;
+    transition: all .5s ease;
+    cursor:pointer;
+}
+
+h3 {
+    position: absolute;
+    font-size: 20px;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+}
+
+img:hover {
+    background-color:white;
+    opacity: 0.2;
+    z-index:0;
 }
