--- a/src/components/portfolioList/PortfolioList.scss
+++ b/src/components/portfolioList/PortfolioList.scss
@@ -1,6 +1,7 @@
 .portfolioList {
     font-size:14px;
-    margin-right: 50px;
+    // margin-right: 25px;
+    // margin-left: 25px;
     padding: 7px;
     border-radius: 10px;
     cursor:pointer;
