added appropriate height sizes for each section. Improved portfolio section ui with css.

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,11 +30,11 @@
     height: calc(100vh);
     scroll-snap-align: start;
     
-    * {
+    // * {
         
-        height: calc(100vh - 70px);
-        scroll-snap-align: start;
-    }
+    //     height: calc(100vh - 70px);
+    //     scroll-snap-align: start;
+    // }
 } 
 
 
