--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -2,6 +2,8 @@
     display:flex;
     align-items: center;
     flex-direction: column;
+    justify-content: space-between;
+    height: calc(100vh);
 }
 
 .title-page {
@@ -13,7 +15,8 @@ ul {
     padding: 0;
     list-style: none;
     display: flex;
-} 
+
+}
 
 
 .container {
