--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -2,12 +2,15 @@
     display:flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
-    height: calc(100vh);
+    align-items: center;
+    // height: calc(100vh);
 }
 
 .title-page {
     font-size: 50px;
+    height: calc(15vh);
+    display: flex;
+    align-items: center;
 }
 
 ul {
@@ -15,9 +18,16 @@ ul {
     padding: 0;
     list-style: none;
     display: flex;
+    // height: calc(5vh);
+    align-items: center;
 
 }
 
+.portfolio-container {
+    height: calc(85vh);
+    display: flex;
+    align-items: center;
+}
 
 .container {
     display:grid;
@@ -33,6 +43,8 @@ ul {
     @media screen and (max-width: 600px)  { 
         grid-template-columns: repeat(1, minmax(0, 1fr));
     }
+
+    
 }
 
 .item {
