--- a/src/components/tools/Tools.scss
+++ b/src/components/tools/Tools.scss
@@ -1,6 +1,59 @@
 .tools {
     display:flex;
+    flex-direction:column;
     align-items: center;
     justify-content: center;
     height: calc(100vh);
+    position:relative;
+    justify-content:space-around;
 }
+
+.skills-title {
+    display:flex;
+    justify-content: center;
+    height: calc(25vh);
+}
+
+.skills-icon-container {
+    height: calc(85vh);
+    display: flex;
+    align-items: center;
+}
+.skills-icon{
+   
+    // width:50%;
+    display:grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    // justify-content:space-between;
+    align-items: center;
+//     align-items: center;
+//     justify-content:center;
+//     flex-direction:column;
+    row-gap: 1rem;
+    column-gap: 1rem;
+    justify-content: center;
+    flex-wrap:wrap;
+    
+    
+}
+.icons{
+    width: 220px;
+    height: 150px;
+    // margin: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    cursor:pointer;
+    padding: 0 !important;
+
+}
+
+.icons img {
+    width:max-content;
+}
+
+// display:grid;
+// grid-template-columns: repeat(3, minmax(0, 1fr));
+// align-items:center;
+// justify-content: center;
+// flex-wrap:wrap;
