--- a/src/components/skills/Skills.scss
+++ b/src/components/skills/Skills.scss
@@ -3,7 +3,7 @@
     flex-direction:column;
     align-items: center;
     justify-content: center;
-    height: calc(100vh);
+    height: max-content;
     position:relative;
     justify-content:space-around;
 }
@@ -11,11 +11,11 @@
 .skills-title {
     display:flex;
     justify-content: center;
-    height: calc(25vh);
+    height: fit-content;
 }
 
 .skills-icon-container {
-    height: calc(85vh);
+    height: fit-content;
     display: flex;
     align-items: center;
 }
@@ -36,22 +36,38 @@
     
     
 }
-.icons{
+.skills-icon-img{
     width: 220px;
     height: 150px;
-    // margin: 10px 20px;
     display: flex;
     align-items: center;
     justify-content:center;
-    cursor:pointer;
     padding: 0 !important;
+    flex-direction:column;
+    height:100%;
 
 }
 
-.icons img {
-    width:max-content;
+.skills-icon-img img {
+    height: max-content;
+    width: 115px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding: 0 !important;
+    
 }
 
+.skills-icon-img h1{
+    display:flex;
+    flex-direction:column;
+    width: max-content;
+    height:fit-content;
+    font-size:medium;
+    padding: 10px;
+    font-family: 'Roboto';
+}
 // display:grid;
 // grid-template-columns: repeat(3, minmax(0, 1fr));
 // align-items:center;
