--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -2,15 +2,17 @@
     display:flex;
     align-items: center;
     flex-direction: column;
-    align-items: center;
-    // height: calc(100vh);
+    height: calc(100vh);
 }
 
 .title-page {
     font-size: 50px;
-    height: calc(15vh);
+    // height: calc(10vh);
+    padding:50px 50px 50px 50px;
     display: flex;
     align-items: center;
+    font-family: Roboto;
+    font-weight: 100;
 }
 
 ul {
@@ -24,7 +26,7 @@ ul {
 }
 
 .portfolio-container {
-    height: calc(85vh);
+    height: calc(60vh);
     display: flex;
     align-items: center;
 }
