--- a/src/components/skills/Skills.scss
+++ b/src/components/skills/Skills.scss
@@ -2,22 +2,34 @@
     display:flex;
     flex-direction:column;
     align-items: center;
-    justify-content: center;
-    height: max-content;
-    position:relative;
-    justify-content:space-around;
+    // justify-content: center;
+    height:100vh;
 }
 
+
 .skills-title {
-    display:flex;
-    justify-content: center;
-    height: fit-content;
+    overflow-y: hidden;
+}
+.skills-title h1{
+    // display:flex;
+    // justify-content: center;
+    // height: fit-content;
+
+    font-size: 50px;
+    // height: calc(10vh);
+    padding: 50px 50px 50px 50px;
+    display: flex;
+    align-items: center;
+    font-family: Roboto;
+    font-weight: 10;
+    
 }
 
 .skills-icon-container {
     height: fit-content;
     display: flex;
-    align-items: center;
+    justify-content: center;
+    height:100vh
 }
 .skills-icon{
    
@@ -67,6 +79,7 @@
     font-size:medium;
     padding: 10px;
     font-family: 'Roboto';
+    overflow-y: hidden;
 }
 // display:grid;
 // grid-template-columns: repeat(3, minmax(0, 1fr));
