--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -2,7 +2,7 @@
     display:flex;
     align-items: center;
     flex-direction: column;
-    height: calc(100vh);
+    height:100%;
 }
 
 .title-page {
