--- a/src/components/tools/Tools.scss
+++ b/src/components/tools/Tools.scss
@@ -2,53 +2,75 @@
     display:flex;
     flex-direction:column;
     align-items: center;
-    justify-content: center;
-    position:relative;
-    justify-content:space-around;
+    height:100%;
 }
 
 .tools-title {
-    display:flex;
-    justify-content: center;
+    overflow-y: hidden;
+}
+
+.tools-title h1{
+    font-size: 50px;
+    padding: 50px 50px 50px 50px;
+    display: flex;
+    align-items: center;
+    font-family: Roboto;
+    font-weight: 10;
+    
 }
 
 .tools-icon-container {
+    height: fit-content;
     display: flex;
-    align-items: center;
+    justify-content: center;
+    height:100vh;
 }
+
 .tools-icon{
     display:grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
-    // justify-content:space-between;
     align-items: center;
-//     align-items: center;
-//     justify-content:center;
-//     flex-direction:column;
     row-gap: 1rem;
     column-gap: 1rem;
     justify-content: center;
     flex-wrap:wrap;
-    
-    
 }
+
 .tools-icon-img{
     width: 220px;
     height: 150px;
-    // margin: 10px 20px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content:center;
-    cursor:pointer;
     padding: 0 !important;
+    overflow-y: hidden;
+    height:100%;
 
 }
 
-.tools-icon img {
-    width:max-content;
+.tools-icon-img h1 {
+    padding: 50px 50px 50px 50px;
+    display: flex;
+    align-items: center;
+    font-family: Roboto;
+    font-weight: 400;
+    
+
+    flex-direction:column;
+    width: max-content;
+    height:fit-content;
+    font-size:medium;
+    padding: 10px;
+    overflow-y: hidden;
 }
 
-// display:grid;
-// grid-template-columns: repeat(3, minmax(0, 1fr));
-// align-items:center;
-// justify-content: center;
-// flex-wrap:wrap;
+.tools-icon-img img {
+    // width:max-content;
+    height: max-content;
+    width: 115px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 !important;
+}
