--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -2,7 +2,11 @@
     display:flex;
     align-items: center;
     flex-direction: column;
-    height:100%;
+    height:100vh;
+
+    @media screen and (max-width: 700px)  { 
+        height:auto;
+    }
 }
 
 .title-page {
@@ -13,22 +17,38 @@
     align-items: center;
     font-family: Roboto;
     font-weight: 100;
+    overflow-y: hidden;
+    @media screen and (max-width: 600px)  { 
+        padding:50px 50px 0px 50px;
+    }
 }
 
 ul {
     margin: 10px;
-    padding: 0;
+    padding-bottom: 25px;
     list-style: none;
     display: flex;
     // height: calc(5vh);
     align-items: center;
-
+    overflow-y: hidden;
+    justify-content: center;
+    padding:10px;
+    
+    @media screen and (max-width: 700px)  { 
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0px;
+    }
 }
 
 .portfolio-container {
-    height: calc(60vh);
+    // height: calc(60vh);
     display: flex;
     align-items: center;
+    overflow-y:hidden;
+    height:max-content;
 }
 
 .container {
