--- a/src/components/portfolioList/PortfolioList.scss
+++ b/src/components/portfolioList/PortfolioList.scss
@@ -5,6 +5,11 @@
     cursor:pointer;
     margin-right:25px;
     margin-left:25px;
+
+    @media screen and (max-width: 700px)  { 
+        padding:10px;
+        overflow-y: hidden;
+    }
 }
 
 ul {
