improved header and navigation css for mobile use

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -12,6 +12,10 @@
     justify-content: space-between;
     line-height: 1.5;
     border-bottom: 1px solid #e0e0e0;
+
+    @media (max-width: 500px) { 
+        padding: 10px 10px 0px;
+     }
 }
 
 .header-name {
