--- a/src/components/navigation/Navigation.scss
+++ b/src/components/navigation/Navigation.scss
@@ -4,6 +4,12 @@
     position: right;
     justify-content: flex-end;
     padding: 10px 30px 0px;
+
+    @media (max-width: 500px) { 
+        display:flex;
+        justify-content: center;
+        padding: 10px 10px 0px;
+     }
 }
 
 .nav a {
@@ -25,6 +31,9 @@
         margin: 0px 2.5px 2.5px 2.5px;
     }
 
+    @media (max-width:500px) { 
+        font-size: 65%;
+     }
     
     
 }
@@ -34,6 +43,10 @@
     -moz-transition: all 1s ease-in-out;
     -o-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out;
+
+    @media (max-width:500px) { 
+        width:fit-content;
+     }
 }
 
 .nav-items:hover {
