improved the about and navigation mobile viewing experience with media queries

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -7,6 +7,11 @@
         display:none;
     }
     height: calc(100vh);
+
+    @media (max-height:700px) { 
+        height:auto;
+        
+     }
 }
 
 .about-me {
@@ -33,6 +38,10 @@
     padding: 0;
     height: calc(60vh);
     overflow: hidden;
+    @media (max-height:700px) { 
+        height:auto;
+        
+     }
     
 }
 
@@ -46,6 +55,8 @@
     justify-content: center;
     margin:40px;
     box-shadow: 0 0px 50px -10px #000019;
+
+    
 }
 
 
