--- a/src/components/navigation/Navigation.scss
+++ b/src/components/navigation/Navigation.scss
@@ -9,6 +9,7 @@
         display:flex;
         justify-content: center;
         padding: 10px 10px 0px;
+        justify-content: space-around;
      }
 }
 
@@ -25,14 +26,16 @@
         font-size:90%;
         margin: 0px 2.5px 2.5px 2.5px;
      }
-     
-    @media (max-width: 515px) { 
-        font-size: 75%;
-        margin: 0px 2.5px 2.5px 2.5px;
-    }
 
     @media (max-width:500px) { 
+        font-size: 75%;
+        margin: 0px 2.5px 2.5px 2.5px;
+
+     }
+     @media (max-width:400px) { 
         font-size: 65%;
+        margin: 0px 2.5px 2.5px 2.5px;
+
      }
     
     
