--- a/src/components/skills/Skills.scss
+++ b/src/components/skills/Skills.scss
@@ -3,6 +3,14 @@
     flex-direction:column;
     align-items: center;
     height:100%;
+
+    @media (max-height:700px) { 
+        height:auto; 
+     }
+
+     @media (max-width:700px) { 
+        height:auto; 
+     }
 }
 
 .skills-title {
@@ -14,9 +22,18 @@
     padding: 50px 50px 50px 50px;
     display: flex;
     align-items: center;
+    justify-items: center;
     font-family: Roboto;
     font-weight: 10;
     
+}
+
+.t {
+    padding-bottom: 0 !important;
+}
+
+.t-css {
+    padding-top: 0 !important;
 }
 
 .skills-icon-container {
@@ -24,6 +41,15 @@
     display: flex;
     justify-content: center;
     height:100vh;
+
+    @media (max-height:700px) { 
+        height:auto;
+        
+     }
+
+     @media (max-width:700px) { 
+        height:auto; 
+     }
 }
 
 .skills-icon{
@@ -33,19 +59,41 @@
     row-gap: 1rem;
     column-gap: 1rem;
     justify-content: center;
-    flex-wrap:wrap;   
+    flex-wrap:wrap;
+    justify-items: center;
+
+    
+       
 }
 
 .skills-icon-img{
     width: 220px;
-    height: 150px;
     display: flex;
     align-items: center;
     justify-content:center;
-    padding: 0 !important;
     flex-direction:column;
     height:100%;
     overflow-y: hidden;
+    
+    
+
+    // @media screen and (max-width: 1000px)  { 
+    //     width: 200px;
+    //     height: 100%;
+    // }
+
+    @media screen and (max-width: 900px)  { 
+        width: 150px;
+        height: 100%;
+    }
+
+    @media screen and (max-width: 600)  { 
+        width: 100px;
+        height: 100%;
+    }
+    
+
+
 }
 
 .skills-icon-img h1{
@@ -55,7 +103,6 @@
     font-family: Roboto;
     font-weight: 400;
     
-
     flex-direction:column;
     width: max-content;
     height:fit-content;
@@ -70,7 +117,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 !important; 
+    padding: 0 !important;
+    @media screen and (max-width: 1000px)  { 
+        width: 100px;
+    } 
+
+    @media screen and (max-width: 900px)  { 
+        width: 80px;
+    } 
+
+    @media screen and (max-width: 800px)  { 
+        width: 60px;
+    } 
+
+    
 }
 
 
