--- a/src/components/tools/Tools.scss
+++ b/src/components/tools/Tools.scss
@@ -3,6 +3,14 @@
     flex-direction:column;
     align-items: center;
     height:100%;
+
+    @media (max-height:700px) { 
+        height:auto; 
+     }
+
+     @media (max-width:700px) { 
+        height:auto; 
+     }
 }
 
 .tools-title {
@@ -24,14 +32,23 @@
     display: flex;
     justify-content: center;
     height:100vh;
+
+    @media (max-height:700px) { 
+        height:auto;
+        
+     }
+
+     @media (max-width:700px) { 
+        height:auto; 
+     }
 }
 
 .tools-icon{
     display:grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
     align-items: center;
-    row-gap: 1rem;
-    column-gap: 1rem;
+    row-gap: 2rem;
+    column-gap: 2rem;
     justify-content: center;
     flex-wrap:wrap;
     justify-items: center;
@@ -48,6 +65,16 @@
     overflow-y: hidden;
     height:100%;
 
+    @media screen and (max-width: 900px)  { 
+        width: 150px;
+        height: 100%;
+    }
+
+    @media screen and (max-width: 600)  { 
+        width: 100px;
+        height: 100%;
+    }
+
 }
 
 .tools-icon-img h1 {
@@ -56,8 +83,6 @@
     align-items: center;
     font-family: Roboto;
     font-weight: 400;
-    
-
     flex-direction:column;
     width: max-content;
     height:fit-content;
@@ -65,6 +90,7 @@
     padding: 10px;
     overflow-y: hidden;
 }
+
 
 .tools-icon-img img {
     // width:max-content;
@@ -74,4 +100,16 @@
     align-items: center;
     justify-content: center;
     padding: 0 !important;
+
+    @media screen and (max-width: 1000px)  { 
+        width: 100px;
+    } 
+
+    @media screen and (max-width: 900px)  { 
+        width: 80px;
+    } 
+
+    @media screen and (max-width: 800px)  { 
+        width: 60px;
+    } 
 }
