--- a/src/components/skills/Skills.scss
+++ b/src/components/skills/Skills.scss
@@ -121,7 +121,10 @@
 
     @media screen and (max-width: 800px)  { 
         width: 60px;
-    } 
+    }
+    @media screen and (max-width: 500px)  { 
+        width: 50px;
+    }  
 
     
 }
