--- a/src/components/tools/Tools.scss
+++ b/src/components/tools/Tools.scss
@@ -112,4 +112,8 @@
     @media screen and (max-width: 800px)  { 
         width: 60px;
     } 
+
+    @media screen and (max-width: 500px)  { 
+        width: 50px;
+    } 
 }
