--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -1,29 +1,74 @@
 .contact {
     display:flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: calc(100vh);
 }
 
-.left {
-    flex: 1;
+.contact-title {
+    display:flex;
 }
 
-.left img {
-    height: 100%;
-    overflow: hidden;
-}
-.right{
-    flex: 1;
+.contact-title h1{
+    font-size: 50px;
+    padding: 50px 50px 50px 50px;
     display: flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content: space-around;
+    align-items: center;
+    justify-items: center;
+    font-family: Roboto;
+    font-weight: 10;
+    
 }
 
-h2 {
-    font-size:30px;
+.contact-section {
+    display:flex;
+    width:100%;
+    align-items: center;
+    justify-content: center;
 }
+
+.contact-img {
+    flex:1;
+    align-items: center;
+    justify-content: center;  
+}
+
+.contact-form {
+    flex:1;
+    display:flex;
+    justify-content: center;
+}
+
+.contact-form form  * {
+    margin: 1px;
+}
+
+
+
+
+// .left {
+//     flex: 1;
+// }
+
+// .left img {
+//     height: 100%;
+//     width: 100%;
+//     overflow: hidden;
+// }
+// .right{
+//     flex: 1;
+//     display: flex;
+//     flex-direction: column;
+//     align-items:center;
+//     justify-content: space-around;
+// }
+
+// h2 {
+//     font-size:30px;
+// }
+
+
 
 form {
     width: 70%;
