--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -4,6 +4,12 @@
     align-items: center;
     justify-content: center;
     height: calc(100vh);
+
+    @media screen and (max-width: 700px)  { 
+        height:auto;
+    }
+
+
 }
 
 .contact-title {
@@ -26,22 +32,60 @@
     width:100%;
     align-items: center;
     justify-content: center;
+
+    @media screen and (max-width: 700px)  { 
+        display:flex;
+        flex-direction: column-reverse;
+        width:100%;
+        overflow:auto;
+    }
+    
+
 }
 
 .contact-img {
     flex:1;
     align-items: center;
-    justify-content: center;  
+    justify-content: center;
+    @media screen and (max-width: 700px)  { 
+        display:flex;
+        width:100%;
+    }  
+}
+
+.contact-img img {
+    @media screen and (max-width: 700px)  { 
+        display:flex;
+        width:80%;
+    } 
 }
 
 .contact-form {
     flex:1;
     display:flex;
+    align-items: center;
     justify-content: center;
+    padding-bottom: 50px;
+
+    @media screen and (max-width: 700px)  { 
+        display:flex;
+        width:100%;
+    }
+}
+
+.contact-form form {
+    @media screen and (max-width: 700px)  { 
+        display:flex;
+        width:100%;
+    }
 }
 
 .contact-form form  * {
     margin: 1px;
+
+    // @media screen and (max-width: 700px)  { 
+    //     width:100%;
+    // }
 }
 
 
