--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -50,6 +50,7 @@
     @media screen and (max-width: 700px)  { 
         display:flex;
         width:100%;
+        padding-bottom: 50px;
     }  
 }
 
@@ -57,6 +58,7 @@
     @media screen and (max-width: 700px)  { 
         display:flex;
         width:80%;
+        
     } 
 }
 
