--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -86,7 +86,7 @@
 }
 
 .contact-form form  * {
-    margin: 1px;
+    margin: 5px;
 }
 
 form {
@@ -96,7 +96,6 @@ form {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin:0px !important;
 
     input {
         width:80%;
@@ -110,6 +109,7 @@ form {
         border-color: lightgreen !important;
         box-shadow: 0 0 10px lightgreen !important;
     }
+    
 
     textarea {
         width: 80%;
@@ -128,5 +128,18 @@ form {
         height: 30px;
         color: white;
         background-color: lightgreen;
+        // margin-top: 5px;
     }
+
+    button:active {
+        transform: scale(0.9);
+        transition: all .1s;
+    }
+
 }
+
+.message {
+    color: lightgreen;
+    padding: 10px; 
+}
+
